--- a/desafios/desafio01/ex1.style.css
+++ b/desafios/desafio01/ex1.style.css
@@ -1,3 +1,37 @@
+*{
+    font-style: normal;
+    text-align: center;
+}
+
 body{
-    background-color: black;
+    background-color: rgba(18, 18, 139, 0.61);
+    font-size: 20px;
+}
+
+header{
+    color: white;
+}
+
+section{
+    background-color: white;
+    width: 500px;
+    margin:auto;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.685);
+}
+div{
+    padding: 5px;
+}
+
+footer > a{
+    text-decoration:none;
+    color: white;
+    font-size: 25px;
+}
+footer > a:hover{
+    color: black;
+}
+footer > a > img{
+    height: 18px;
 }
