--- a/desafios/desafio05/style.css
+++ b/desafios/desafio05/style.css
@@ -12,8 +12,7 @@ body{
 section{
     background-color: white;
     color: black;
-    width: 40em;
-    height: 20em;
+    width: 500px;
     margin: auto;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.774);
     border-radius: 10px;
